Fix separator animation causing scrollbar appear

--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -258,16 +258,26 @@
     }
   }
 
-  &.sd-element--complex {
+  &.sd-element--complex:not(.sd-question--empty) {
     & > .sd-element__header--location-top:after {
       display: block;
-      animation-name: fadeIn;
+      opacity: 0;
+      height: 0;
+      --animation-height: 1px;
+      animation-name: fadeIn, moveIn;
       animation-fill-mode: forwards;
-      animation-duration: $transition-duration;
+      animation-timing-function: $ease-out;
+      animation-delay: $expand-fade-in-delay, 0s;
+      animation-duration: $expand-fade-in-duration, $expand-move-in-duration;
     }
 
     &.sd-element--collapsed .sd-element__header--location-top:after {
       animation-direction: reverse;
+      opacity: 1;
+      height: 1px;
+      animation-timing-function: $reverse-ease-out;
+      animation-delay: 0s, $collapse-move-out-delay;
+      animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration;
     }
   }
 }
